[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/UFO.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy_Script.gd" type="Script" id=2]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Shoot" type="Timer" parent="."]
autostart = true

[node name="Move" type="Timer" parent="."]
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 12, -117.4, 13.4, -114, 30, -114, 30, -111.4, 31.4, -108, 42, -108, 42, -105.4, 43.4, -102, 46.8, -102, 50, -98.8, 50, -96, 52.8, -96, 56, -92.8, 56, -90, 65.4, -90, 67.4, -84, 70.8, -84, 74, -80.8, 74, -78, 76.8, -78, 80, -74.8, 80, -65.4, 86, -63.4, 86, -54, 88.8, -54, 92, -50.8, 92, -42, 94.8, -42, 98, -38.8, 98, 5.39999, 92, 7.39999, 92, 12, 95.4, 12, 97.4, 18, 107.4, 18, 109.4, 24, 112.8, 24, 116, 27.2, 116, 30, 118.8, 30, 122, 33.2, 122, 54, 119.5, 54, 116, 55.4, 116, 58.8, 112.8, 62, 110, 62, 110, 64.8, 106.8, 68, 104, 68, 104, 70.8, 100.8, 74, 98, 74, 98, 76.8, 94.8, 80, 79.4, 80, 77.4, 86, 61.4, 86, 59.4, 92, 44, 92, 44, 94.8, 40.8, 98, 26, 98, 26, 100.8, 22.8, 104, 8, 104, 8, 106.8, 4.8, 110, -22, 110, -22, 107.5, -23.4, 104, -40, 104, -40, 101.5, -41.4, 98, -58, 98, -58, 95.5, -59.4, 92, -76, 92, -76, 89.5, -77.4, 86, -94, 86, -94, 83.5, -95.4, 80, -112, 80, -112, 77.5, -113.4, 74, -116.8, 74, -120, 70.8, -120, 68, -122.8, 68, -126, 64.8, -126, 62, -128.8, 62, -132, 58.8, -132, 56, -134.8, 56, -138, 52.8, -138, 50, -140, 50, -140, 24, -138, 24, -138, 21.2, -134.8, 18, -132, 18, -132, 15.2, -128.8, 12, -119.4, 12, -117.4, 6, -114, 6, -114, -39.4, -108, -41.4, -108, -52, -105.4, -52, -102, -53.4, -102, -64, -99.4, -64, -96, -65.4, -96, -76, -93.4, -76, -90, -77.4, -90, -80.8, -86.8, -84, -84, -84, -84, -86.8, -80.8, -90, -72, -90, -72, -93.4, -66, -95.4, -66, -98.8, -62.8, -102, -60, -102, -60, -104.8, -56.8, -108, -47.4, -108, -45.4, -114, -29.4, -114, -28, -117.4, -28, -120, 12, -120 )

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="timeout" from="Move" to="." method="_on_Move_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
